kubernetes/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: exam-platform
  labels:
    name: exam-platform
